fix meta spacing

--- a/src/scss/components/_meta.scss
+++ b/src/scss/components/_meta.scss
@@ -4,8 +4,8 @@
 ////
 
 .meta {
-	.h-entry,
-	.h-review {
+	.h-entry &,
+	.h-review & {
 		@include owl(tiny);
 	}
 
